# assidenter

./: .gitignore  README.md  index.html  package-lock.json  package.json
services/: README.md  docker-compose.yml  setup.sh
services/voxcpm/: Dockerfile  requirements.txt  server.py
services/whisper-livekit/: Dockerfile  requirements.txt  server.py
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/services/: asr.rs  llm.rs  mod.rs  tts.rs
src-tauri/src/services/embedded/: asr.rs  llm.rs  mod.rs  model_manager.rs  tts.rs
src/components/: VideoTrimmer.vue  VoiceAssistant.vue
